--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,79 +1,74 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Skystore</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Skystore</h5>
-    <nav class="ms-5">
-        <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
-        <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
-    </nav>
-</div>
+{% extends 'catalog/base.html' %}
 
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Skystore</h1>
-    <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
-        продать</p>
-</div>
+{#{% block content %}#}
+{#  <div class="row">#}
+{#    {% for object in object_list %}#}
+{#        {% include 'catalog/includes/inc_category.html' %}#}
+{#   {% endfor %}#}
+{#  </div>#}
+{#{% endblock %}#}
 
-<div class="container">
-    <div class="row text-center">
-        <div class="col-3">
+{#{% block content %}#}
+{#  <div class="container">#}
+{#    <div class="row">#}
+{#      {% for product in product_list %}#}
+{#        <div class="col-md-4 mb-4">#}
+{#          <div class="card">#}
+{#            <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}" class="card-img-top">#}
+{#            <div class="card-body">#}
+{#              <h5 class="card-title">{{ product.product_name }}</h5>#}
+{#              <p class="card-text">{{ product.product_description|truncatechars:100 }}</p>#}
+{#              <p class="card-text">Цена: {{ product.product_price|title }}</p>#}
+{#              <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Подробнее</a>#}
+{#            </div>#}
+{#          </div>#}
+{#        </div>#}
+{#      {% endfor %}#}
+{#    </div>#}
+{#  </div>#}
+{#{% endblock %}#}
+
+
+{#{% block content %}#}
+{#  <div class="row">#}
+{#    {% for object in object_list %}#}
+{#        <div class="col-md-4">#}
+{#            <div class="card mb-4 box-shadow">#}
+{#                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">#}
+{#                <div class="card-body">#}
+{#                    <h5 class="card-title">{{ object.product_name }}</h5>#}
+{#                    <p class="card-text">{{ object.product_price|title }}</p>#}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="btn-group">#}
+{#                            <a href="{% url 'catalog:product_detail' pk=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    {% endfor %}#}
+{#  </div>#}
+{#{% endblock %}#}
+
+{% block content %}
+  <div class="row">
+    {% for object in object_list %}
+        <div class="col-md-4">
             <div class="card mb-4 box-shadow">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Удобный сервис рассылок</h4>
-                </div>
+                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">$ 140</h1>
-                    <ul class="list-unstyled mt-3 mb-4 text-start m-3">
-                        <li>- Неограниченная лицензия</li>
-                        <li>- Поддержка</li>
-                        <li>- Установка на сервер</li>
-                        <li>- Получение обновлений</li>
-                    </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    <h5 class="card-title">{{ object.product_name }}</h5>
+                    <p class="card-text">{{ object.product_price|title }}</p>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="btn-group">
+{#                            <a href="{% url 'catalog:category_products' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
+                            <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <footer class="pt-4 my-md-5 pt-md-5 border-top">
-        <div class="row">
-            <div class="col-12 col-md">
-                SkyStore
-                <small class="d-block mb-3 text-muted">&copy; 2023</small>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Категории</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Рассылки</a></li>
-                    <li><a class="text-muted" href="#">Телеграм боты</a></li>
-                    <li><a class="text-muted" href="#">Полезные утилиты</a></li>
-                    <li><a class="text-muted" href="#">Веб-приложения</a></li>
-                    <li><a class="text-muted" href="#">Микросервисы</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Дополнительно</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="#">Мы пишем</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>О нас</h5>
-                <ul class="list-unstyled text-small">
-                    <li><a class="text-muted" href="/contacts/">Контакты</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
-</html>
+    {% endfor %}
+  </div>
+{% endblock %}
