--- a/catalog/templates/catalog/includes/inc_category.html
+++ b/catalog/templates/catalog/includes/inc_category.html
@@ -5,7 +5,7 @@
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <a href="{% url 'catalog:category_products' object.pk %}" type=button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>
-                  <a href="{% url 'catalog:product_detail' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
+{#                <a href="{% url 'catalog:product_detail' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
               </div>
             </div>
         </div>
