--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,12 +1,12 @@
 {% extends 'catalog/base.html' %}
 
-{#{% block content %}#}
-{#  <div class="row">#}
-{#    {% for object in object_list %}#}
-{#        {% include 'catalog/includes/inc_category.html' %}#}
-{#   {% endfor %}#}
-{#  </div>#}
-{#{% endblock %}#}
+{% block content %}
+  <div class="row">
+    {% for object in object_list %}
+        {% include 'catalog/includes/inc_category.html' %}
+   {% endfor %}
+  </div>
+{% endblock %}
 
 {#{% block content %}#}
 {#  <div class="container">#}
@@ -50,25 +50,25 @@
 {#  </div>#}
 {#{% endblock %}#}
 
-{% block content %}
-  <div class="row">
-    {% for object in object_list %}
-        <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ object.product_name }}</h5>
-                    <p class="card-text">{{ object.product_price|title }}</p>
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
+{#{% block content %}#}
+{#  <div class="row">#}
+{#    {% for object in object_list %}#}
+{#        <div class="col-md-4">#}
+{#            <div class="card mb-4 box-shadow">#}
+{#                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">#}
+{#                <div class="card-body">#}
+{#                    <h5 class="card-title">{{ object.product_name }}</h5>#}
+{#                    <p class="card-text">{{ object.product_price|title }}</p>#}
+{#                    <div class="d-flex justify-content-between align-items-center">#}
+{#                        <div class="btn-group">#}
 {#                            <a href="{% url 'catalog:category_products' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
-                            <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-  </div>
-{% endblock %}
+{#                            <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
+{##}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    {% endfor %}#}
+{#  </div>#}
+{#{% endblock %}#}
