--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -1,74 +1,26 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-  <div class="row">
-    {% for object in object_list %}
-        {% include 'catalog/includes/inc_category.html' %}
-   {% endfor %}
-  </div>
+    <div class="row">
+        {% for object in object_list %}
+            <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="image-container" style="height: 200px; overflow: hidden;">
+                        <img class="card-img-top" src="/media/{{ object.product_image }}"
+                             style="width: 100%; height: auto;">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">{{ object.product_name }}</h5>
+                        <p class="card-text">{{ object.product_price|title }}</p>
+                        <div class="btn-group flex-column">
+                            <a href="{% url 'catalog:category_products' object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-secondary">Посмотреть все товары категории</a>
+                            <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button"
+                               class="btn btn-sm btn-outline-secondary">Открыть товар</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
-
-{#{% block content %}#}
-{#  <div class="container">#}
-{#    <div class="row">#}
-{#      {% for product in product_list %}#}
-{#        <div class="col-md-4 mb-4">#}
-{#          <div class="card">#}
-{#            <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}" class="card-img-top">#}
-{#            <div class="card-body">#}
-{#              <h5 class="card-title">{{ product.product_name }}</h5>#}
-{#              <p class="card-text">{{ product.product_description|truncatechars:100 }}</p>#}
-{#              <p class="card-text">Цена: {{ product.product_price|title }}</p>#}
-{#              <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">Подробнее</a>#}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
-{#      {% endfor %}#}
-{#    </div>#}
-{#  </div>#}
-{#{% endblock %}#}
-
-
-{#{% block content %}#}
-{#  <div class="row">#}
-{#    {% for object in object_list %}#}
-{#        <div class="col-md-4">#}
-{#            <div class="card mb-4 box-shadow">#}
-{#                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">#}
-{#                <div class="card-body">#}
-{#                    <h5 class="card-title">{{ object.product_name }}</h5>#}
-{#                    <p class="card-text">{{ object.product_price|title }}</p>#}
-{#                    <div class="d-flex justify-content-between align-items-center">#}
-{#                        <div class="btn-group">#}
-{#                            <a href="{% url 'catalog:product_detail' pk=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    {% endfor %}#}
-{#  </div>#}
-{#{% endblock %}#}
-
-{#{% block content %}#}
-{#  <div class="row">#}
-{#    {% for object in object_list %}#}
-{#        <div class="col-md-4">#}
-{#            <div class="card mb-4 box-shadow">#}
-{#                <img class="card-img-top" src="/media/{{ object.product_image }}" style="max-width: 90%; height: auto;">#}
-{#                <div class="card-body">#}
-{#                    <h5 class="card-title">{{ object.product_name }}</h5>#}
-{#                    <p class="card-text">{{ object.product_price|title }}</p>#}
-{#                    <div class="d-flex justify-content-between align-items-center">#}
-{#                        <div class="btn-group">#}
-{#                            <a href="{% url 'catalog:category_products' object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
-{#                            <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Посмотреть</a>#}
-{##}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    {% endfor %}#}
-{#  </div>#}
-{#{% endblock %}#}
