--- a/catalog/templates/catalog/Products.html
+++ b/catalog/templates/catalog/Products.html
@@ -1,11 +1,12 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 
 {% block content %}
     <div class="row">
         {% for object in object_list %}
             <div class="col-md-4">
                 <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="/media/{{ object.product_image }}"
+                    <img class="card-img-top" src="{{ object.product_image|mediapath }}"
                          style="max-width: 90%; height: auto;">
                     <div class="card-body">
                         <h5 class="card-title">{{ object.product_name }}</h5>
