--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -13,7 +13,7 @@
                         <p class="card-text">{{ object.product_price|title }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="{% url 'catalog:product_detail' product_id=object.pk %}" type="button"
+                                <a href="{% url 'catalog:product_detail' object.pk %}" type="button"
                                    class="btn btn-sm btn-outline-secondary">Открыть товар</a>
                             </div>
                         </div>
