--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -30,6 +30,7 @@
                     <ul class="list-unstyled">
                         <li><a href="{% url 'catalog:index' %}" class="text-white">Главная страница</a></li>
                         <li><a href="{% url 'catalog:categories' %}" class="text-white">Категории товаров</a></li>
+                        <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
                     </ul>
                 </div>
             </div>
