--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 
 {% block content %}
     <div class="row">
@@ -9,13 +10,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="{{ product.product_image.url }}" alt="{{ product.product_name }}" class="img-fluid">
+                <img src="{{ object.product_image|mediapath }}" alt="{{ product.product_name }}" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <h1>{{ product.product_name }}</h1>
                 <p>Цена: {{ product.product_price|title }}</p>
                 <p>Описание: {{ product.product_description }}</p>
-                <!-- Другая информация о товаре... -->
             </div>
         </div>
     </div>
