--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,22 +1,36 @@
 {% extends 'catalog/base.html' %}
 
-
 {% block content %}
-    <div class="col-6">
-        <div class="card">
-            <div class="card-header">
-                <div class="card-title">
-                    Добавление товара
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <h5 class="card-title">Добавление товара</h5>
+                    </div>
+                    <div class="card-body">
+                        <form method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <button type="submit" class="btn btn-outline-secondary float-end">Сохранить</button>
+                        </form>
+                    </div>
                 </div>
             </div>
-            <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn-outline-secondary">Сохранить</button>
-                </form>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h5 class="card-title">Версии</h5>
+                    </div>
+                    <div class="card-body">
+                        {{ formset.management_form }}
+                        {% for form in formset.forms %}
+                            {{ form.as_p }}
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-            <div class="card-footer"></div>
         </div>
     </div>
 {% endblock %}
+
