--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -11,6 +11,12 @@
                     <div class="card-body">
                         <h5 class="card-title">{{ object.product_name }}</h5>
                         <p class="card-text">{{ object.product_price|title }}</p>
+                        {% if object.active_version %}
+                            <p>Активная версия: {{ object.active_version.name }}
+                                ({{ object.active_version.version_number }})</p>
+                        {% else %}
+                            <p>Нет активной версии</p>
+                        {% endif %}
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a href="{% url 'catalog:product_detail' object.pk %}" type="button"
@@ -23,3 +29,4 @@
         {% endfor %}
     </div>
 {% endblock %}
+
