--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -28,7 +28,7 @@
                 <div class="col-sm-4 offset-md-1 py-4">
                     <h4 class="text-white">Меню</h4>
                     <ul class="list-unstyled">
-                        <li><a href="{% url 'catalog:index' %}" class="text-white">Главная страница</a></li>
+                        <li><a href="{% url 'catalog:IndexListView' %}" class="text-white">Главная страница</a></li>
                         <li><a href="{% url 'catalog:categories' %}" class="text-white">Категории товаров</a></li>
                         <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
                     </ul>
