--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,5 +1,6 @@
 {% extends 'catalog/base.html' %}
 
+
 {% block content %}
     <div class="container">
         <form method="post" enctype="multipart/form-data">
@@ -25,6 +26,9 @@
                             {{ formset.management_form }}
                             {% for form in formset.forms %}
                                 {{ form.as_p }}
+                                {% if not forloop.last %}
+                                    <hr>
+                                {% endif %}
                             {% endfor %}
                         </div>
                     </div>
