--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -31,6 +31,13 @@
                         <li><a href="{% url 'catalog:IndexListView' %}" class="text-white">Главная страница</a></li>
                         <li><a href="{% url 'catalog:categories' %}" class="text-white">Категории товаров</a></li>
                         <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
+                        {% if user.is_authenticated %}
+                            <li><a href="{% url 'users:profile' %}" class="text-white">Профиль</a></li>
+                            <li><a href="{% url 'users:logout' %}" class="text-white">Выйти</a></li>
+                        {% else %}
+                            <li><a href="{% url 'users:login' %}" class="text-white">Войти</a></li>
+                            <li><a href="{% url 'users:register' %}" class="text-white">Регистрация</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
