--- a/users/templates/users/verify_email.html
+++ b/users/templates/users/verify_email.html
@@ -1,22 +1,27 @@
 {% extends 'catalog/base.html' %}
-
 {% block content %}
 
-    <!DOCTYPE html>
-    <html lang="ru">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Email Verification Confirmation</title>
-    </head>
-    <body>
-    <h1>Email Verification Confirmation</h1>
-    {% if success %}
-        <p>Your email has been successfully verified.</p>
-    {% else %}
-        <p>Sorry, the verification link is invalid or has expired.</p>
-    {% endif %}
-    </body>
-    </html>
+    <div class="col-12">
+        <form class="row" method="post">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">
+                            Введите код подтверждения
+                        </h3>
+                    </div>
+                    <div class="card-body">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <input type="text" name="verify_code" class="form-control" id="name"
+                               placeholder="Введите код"
+                               required>
+                        <button type="submit" class="btn btn-primary">Подтвердить</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 
 {% endblock %}
