--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -27,8 +27,13 @@
                                class="btn btn-sm btn-outline-secondary">Посмотреть все товары категории</a>
                             <a href="{% url 'catalog:product_detail' object.pk %}"
                                class="btn btn-sm btn-outline-secondary">Открыть товар</a>
-                            <a href="{% url 'catalog:update_product' object.pk %}"
-                               class="btn btn-sm btn-outline-secondary">Редактировать</a>
+                            {% if user.is_verified %}
+                                <a href="{% url 'catalog:update_product' object.pk %}" class="btn btn-link">Изменить</a>
+                                <a href="{% url 'catalog:delete_product' object.pk %}"
+                                   class="btn btn-danger">Удалить</a>
+                            {% else %}
+                                <a></a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
