--- a/users/templates/users/new_password.html
+++ b/users/templates/users/new_password.html
@@ -8,13 +8,13 @@
             <div class="card">
                 <div class="card-header">
                     <h3 class="card-title">
-                        Создать новый пароль
+                        Восстановление пароля
                     </h3>
                 </div>
                 <div class="card-body">
                     {{ form }}
 
-                    <button type="submit" class="btn btn-success">Отправить пароль</button>
+                    <button type="submit" class="btn btn-success">Подтвердить</button>
 
                 </div>
             </div>
